--- a/index.html
+++ b/index.html
@@ -1,14 +1,59 @@
-<p>
-  <b>HyperText Markup Language (HTML)</b> adalah
-  <a href="https://id.wikipedia.org/wiki/Bahasa_markah">bahasa markah</a>
-  standar untuk dokumen yang dirancang untuk ditampilkan di peramban internet.
-  Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets (CSS) dan
-  bahasa skrip lainnya seperti JavaScript, VBScript, dan PHP.
-</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Belajar HTML</title>
+  </head>
 
-<p>
-  Peramban internet menerimadokumen HTML dari server web atau dari penyimpanan
-  lokal dan membuat dokumen menjadi halaman web multimedia. HTML menggambarkan
-  struktur halaman web secara semantik dan isyarat awal yang disertakan untuk
-  penampilan dokumen.
-</p>
+  <body>
+    <h1>HTML</h1>
+
+    <p>
+      <b>HyperText Markup Language (HTML)</b> adalah
+      <a href="https://id.wikipedia.org/wiki/Bahasa_markah">bahasa markah</a>
+      standar untuk dokumen yang dirancang untuk ditampilkan di peramban
+      internet. Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets
+      (CSS) dan bahasa skrip lainnya seperti JavaScript, VBScript, dan PHP.
+    </p>
+
+    <p>
+      Peramban internet menerimadokumen HTML dari server web atau dari
+      penyimpanan lokal dan membuat dokumen menjadi halaman web multimedia. HTML
+      menggambarkan struktur halaman web secara semantik dan isyarat awal yang
+      disertakan untuk penampilan dokumen.
+    </p>
+
+    <h2>Sejarah</h2>
+
+    <p>
+      Pada tahun 1980 seorang ahli fisika, Tim Berners-Lee, dan juga seorang
+      kontraktor di CERN (Organisasi Eropa untuk Riset Nuklir) mengusulkan dan
+      menyusun ENQUIRE, sebuah sistem untuk ilmuwan CERN dalam membagi dokumen.
+      Sembilan tahun kemudian, Berners-Lee mengusulkan adanya sistem markah
+      berbasis internet.[2] Berners-Lee menspesifikasikan HTML dan menulis
+      jaringan beserta perangkat lunaknya di akhir 1990. Pada tahun yang sama,
+      Berners-Lee dan Robert Cailliau, insinyur sistem data CERN berkolaborasi
+      dalam sebuah permintaan untuk pendanaan, namun tidak diterima secara resmi
+      oleh CERN. Di catatan pribadinya[3] sejak 1990 dia mendaftar[4] "beberapa
+      dari banyak daerah yang menggunakan hypertext" dan pertama-tama
+      menempatkan sebuah ensiklopedia.
+    </p>
+
+    <h3>Sejarah versi HTML</h3>
+
+    <h4>14 Januari 1997</h4>
+
+    <p>
+      HTML 3.2[7] dipublikasikan sebagai Konsorsium World Wide Web. Versi ini
+      merupakan versi pertama yang dikembangkan dan distandardisasi secara
+      khusus oleh Konsorsium World Wide Web, sebagaimana IETF sudah menutup
+      kelompok kerja HTMLnya pada 12 September, 1996.[8] Pada awalnya disebut
+      "Wilbur",[9] HTML 3.2 menghilangkan rumus matematika sama sekali yang
+      sedang berkonsiliasi atas kasus tumpang tindih antara berbagai kepemilikan
+      dan mengadopsi sebagian besar tanda markah visual dari Netscape. Elemen
+      kedip dari Netscape dan elemen marquee besutan Microsoft dihilangkan
+      karena kesepakatan bersama antara kedua perusahaan. Sebuah markup untuk
+      rumus matematika serupa dengan yang ada dalam HTML tidak memiliki standar
+      sampai 14 bulan kemudian di MathML.
+    </p>
+  </body>
+</html>
