--- a/index.html
+++ b/index.html
@@ -40,6 +40,34 @@
 
     <h3>Sejarah versi HTML</h3>
 
+    <h4>24 November 1995</h4>
+
+    <p>
+      HTML 2.0 dipublikasikan sebagai IETF RFC 1866. Penambahan RFC memperbanyak
+      kemampuan untuk:
+    </p>
+
+    <ol>
+      <li>
+        <b>November 25, 1995</b>: RFC 1867 (mengunggah file berdasarkan bentuk)
+        <ul>
+          <li>
+            sub list 1
+            <ul>
+              <li>sub sub list 1</li>
+              <li>sub sub list 2</li>
+              <li>sub sub list 3</li>
+            </ul>
+          </li>
+          <li>sub list 2</li>
+          <li>sub list 3</li>
+        </ul>
+      </li>
+      <li>Mei 1996: RFC 1942 (tabel)</li>
+      <li>Agustus 1996: RFC 1980 (peta gambar berbasis klien)</li>
+      <li>Januari 1997: RFC 2070 (internasionalisasi)</li>
+    </ol>
+
     <h4>14 Januari 1997</h4>
 
     <p>
