--- a/index.html
+++ b/index.html
@@ -5,37 +5,42 @@
   </head>
 
   <body>
-    <h1>HTML</h1>
-
+    <a href="about.html">My Kisah</a>
+    <h1>HTML<sup>&copy;</sup></h1>
+    <hr />
     <p>
       <b>HyperText Markup Language (HTML)</b> adalah
       <a href="https://id.wikipedia.org/wiki/Bahasa_markah">bahasa markah</a>
-      standar untuk dokumen yang dirancang untuk ditampilkan di peramban
-      internet. Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets
-      (CSS) dan bahasa skrip lainnya seperti JavaScript, VBScript, dan PHP.
+      standar untuk dokumen yang dirancang untuk ditampilkan di
+      <a href="https://id.wikipedia.org/wiki/Browser">peramban internet.</a> Ini
+      dapat dibantu oleh teknologi seperti Cascading Style Sheets (CSS) dan
+      bahasa skrip lainnya seperti JavaScript, VBScript, dan PHP.
     </p>
 
     <p>
       Peramban internet menerimadokumen HTML dari server web atau dari
-      penyimpanan lokal dan membuat dokumen menjadi halaman web multimedia. HTML
-      menggambarkan struktur halaman web secara semantik dan isyarat awal yang
-      disertakan untuk penampilan dokumen.
+      penyimpanan lokal dan membuat dokumen menjadi halaman web multimedia.
+      <br />
+      HTML menggambarkan struktur halaman web secara semantik dan isyarat awal
+      yang disertakan untuk penampilan dokumen.
     </p>
 
     <h2>Sejarah</h2>
 
     <p>
-      Pada tahun 1980 seorang ahli fisika, Tim Berners-Lee, dan juga seorang
-      kontraktor di CERN (Organisasi Eropa untuk Riset Nuklir) mengusulkan dan
-      menyusun ENQUIRE, sebuah sistem untuk ilmuwan CERN dalam membagi dokumen.
-      Sembilan tahun kemudian, Berners-Lee mengusulkan adanya sistem markah
-      berbasis internet.[2] Berners-Lee menspesifikasikan HTML dan menulis
-      jaringan beserta perangkat lunaknya di akhir 1990. Pada tahun yang sama,
-      Berners-Lee dan Robert Cailliau, insinyur sistem data CERN berkolaborasi
-      dalam sebuah permintaan untuk pendanaan, namun tidak diterima secara resmi
-      oleh CERN. Di catatan pribadinya[3] sejak 1990 dia mendaftar[4] "beberapa
-      dari banyak daerah yang menggunakan hypertext" dan pertama-tama
-      menempatkan sebuah ensiklopedia.
+      Pada tahun 1980 seorang ahli fisika, Tim Berners-Lee<sup
+        ><a href="https://id.wikipedia.org/wiki/Tim_Berners-Lee">[1]</a></sup
+      >, dan juga seorang kontraktor di CERN (Organisasi Eropa untuk Riset
+      Nuklir) mengusulkan dan menyusun ENQUIRE, sebuah sistem untuk ilmuwan CERN
+      dalam membagi dokumen. Sembilan tahun kemudian, Berners-Lee mengusulkan
+      adanya sistem markah berbasis internet.[2] Berners-Lee menspesifikasikan
+      HTML dan menulis jaringan beserta perangkat lunaknya di akhir 1990. Pada
+      tahun yang sama, Berners-Lee dan Robert Cailliau, insinyur sistem data
+      CERN berkolaborasi dalam sebuah permintaan untuk pendanaan, namun tidak
+      diterima secara resmi oleh CERN. Di catatan pribadinya[3] sejak 1990 dia
+      mendaftar[4] "beberapa dari banyak daerah yang menggunakan hypertext" dan
+      pertama-tama menempatkan sebuah ensiklopedia.
+      <a href="gmail:naufalmusyafaa@gmail.com">email</a>
     </p>
 
     <h3>Sejarah versi HTML</h3>
@@ -54,8 +59,8 @@
           <li>
             sub list 1
             <ul>
-              <li>sub sub list 1</li>
-              <li>sub sub list 2</li>
+              <li>sub sub list <sup>1</sup></li>
+              <li>sub sub list <sub>2</sub></li>
               <li>sub sub list 3</li>
             </ul>
           </li>
