--- a/index.html
+++ b/index.html
@@ -3,90 +3,110 @@
   <head>
     <title>Belajar HTML</title>
   </head>
-
   <body>
-    <a href="about.html">My Kisah</a>
-    <h1>HTML<sup>&copy;</sup></h1>
-    <hr />
-    <p>
-      <b>HyperText Markup Language (HTML)</b> adalah
-      <a href="https://id.wikipedia.org/wiki/Bahasa_markah">bahasa markah</a>
-      standar untuk dokumen yang dirancang untuk ditampilkan di
-      <a href="https://id.wikipedia.org/wiki/Browser">peramban internet.</a> Ini
-      dapat dibantu oleh teknologi seperti Cascading Style Sheets (CSS) dan
-      bahasa skrip lainnya seperti JavaScript, VBScript, dan PHP.
-    </p>
+    <nav>
+      <a href="index.html">Home</a>
+      <a href="about.html">My Kisah</a>
+    </nav>
+    <main>
+      <section>
+        <h1>HTML<sup>&copy;</sup></h1>
+        <hr />
+        <p>
+          <b>HyperText Markup Language (HTML)</b> adalah
+          <a href="https://id.wikipedia.org/wiki/Bahasa_markah"
+            >bahasa markah</a
+          >
+          standar untuk dokumen yang dirancang untuk ditampilkan di
+          <a href="https://id.wikipedia.org/wiki/Browser">peramban internet.</a>
+          Ini dapat dibantu oleh teknologi seperti Cascading Style Sheets (CSS)
+          dan bahasa skrip lainnya seperti JavaScript, VBScript, dan PHP.
+        </p>
 
-    <p>
-      Peramban internet menerimadokumen HTML dari server web atau dari
-      penyimpanan lokal dan membuat dokumen menjadi halaman web multimedia.
-      <br />
-      HTML menggambarkan struktur halaman web secara semantik dan isyarat awal
-      yang disertakan untuk penampilan dokumen.
-    </p>
+        <p>
+          Peramban internet menerimadokumen HTML dari server web atau dari
+          penyimpanan lokal dan membuat dokumen menjadi halaman web multimedia.
+          <br />
+          HTML menggambarkan struktur halaman web secara semantik dan isyarat
+          awal yang disertakan untuk penampilan dokumen.
+        </p>
+      </section>
 
-    <h2>Sejarah</h2>
+      <article>
+        <h2>Sejarah</h2>
 
-    <p>
-      Pada tahun 1980 seorang ahli fisika, Tim Berners-Lee<sup
-        ><a href="https://id.wikipedia.org/wiki/Tim_Berners-Lee">[1]</a></sup
-      >, dan juga seorang kontraktor di CERN (Organisasi Eropa untuk Riset
-      Nuklir) mengusulkan dan menyusun ENQUIRE, sebuah sistem untuk ilmuwan CERN
-      dalam membagi dokumen. Sembilan tahun kemudian, Berners-Lee mengusulkan
-      adanya sistem markah berbasis internet.[2] Berners-Lee menspesifikasikan
-      HTML dan menulis jaringan beserta perangkat lunaknya di akhir 1990. Pada
-      tahun yang sama, Berners-Lee dan Robert Cailliau, insinyur sistem data
-      CERN berkolaborasi dalam sebuah permintaan untuk pendanaan, namun tidak
-      diterima secara resmi oleh CERN. Di catatan pribadinya[3] sejak 1990 dia
-      mendaftar[4] "beberapa dari banyak daerah yang menggunakan hypertext" dan
-      pertama-tama menempatkan sebuah ensiklopedia.
-      <a href="gmail:naufalmusyafaa@gmail.com">email</a>
-    </p>
+        <p>
+          Pada tahun 1980 seorang ahli fisika, Tim Berners-Lee<sup
+            ><a href="https://id.wikipedia.org/wiki/Tim_Berners-Lee"
+              >[1]</a
+            ></sup
+          >, dan juga seorang kontraktor di CERN (Organisasi Eropa untuk Riset
+          Nuklir) mengusulkan dan menyusun ENQUIRE, sebuah sistem untuk ilmuwan
+          CERN dalam membagi dokumen. Sembilan tahun kemudian, Berners-Lee
+          mengusulkan adanya sistem markah berbasis internet.[2] Berners-Lee
+          menspesifikasikan HTML dan menulis jaringan beserta perangkat lunaknya
+          di akhir 1990. Pada tahun yang sama, Berners-Lee dan Robert Cailliau,
+          insinyur sistem data CERN berkolaborasi dalam sebuah permintaan untuk
+          pendanaan, namun tidak diterima secara resmi oleh CERN. Di catatan
+          pribadinya[3] sejak 1990 dia mendaftar[4] "beberapa dari banyak daerah
+          yang menggunakan hypertext" dan pertama-tama menempatkan sebuah
+          ensiklopedia.
+          <a href="gmail:naufalmusyafaa@gmail.com">email</a>
+        </p>
+      </article>
 
-    <h3>Sejarah versi HTML</h3>
+      <article>
+        <h3>Sejarah versi HTML</h3>
 
-    <h4>24 November 1995</h4>
+        <h4>24 November 1995</h4>
 
-    <p>
-      HTML 2.0 dipublikasikan sebagai IETF RFC 1866. Penambahan RFC memperbanyak
-      kemampuan untuk:
-    </p>
+        <p>
+          HTML 2.0 dipublikasikan sebagai IETF RFC 1866. Penambahan RFC
+          memperbanyak kemampuan untuk:
+        </p>
 
-    <ol>
-      <li>
-        <b>November 25, 1995</b>: RFC 1867 (mengunggah file berdasarkan bentuk)
-        <ul>
+        <ol>
           <li>
-            sub list 1
+            <b>November 25, 1995</b>: RFC 1867 (mengunggah file berdasarkan
+            bentuk)
             <ul>
-              <li>sub sub list <sup>1</sup></li>
-              <li>sub sub list <sub>2</sub></li>
-              <li>sub sub list 3</li>
+              <li>
+                sub list 1
+                <ul>
+                  <li>sub sub list <sup>1</sup></li>
+                  <li>sub sub list <sub>2</sub></li>
+                  <li>sub sub list 3</li>
+                </ul>
+              </li>
+              <li>sub list 2</li>
+              <li>sub list 3</li>
             </ul>
           </li>
-          <li>sub list 2</li>
-          <li>sub list 3</li>
-        </ul>
-      </li>
-      <li>Mei 1996: RFC 1942 (tabel)</li>
-      <li>Agustus 1996: RFC 1980 (peta gambar berbasis klien)</li>
-      <li>Januari 1997: RFC 2070 (internasionalisasi)</li>
-    </ol>
+          <li>Mei 1996: RFC 1942 (tabel)</li>
+          <li>Agustus 1996: RFC 1980 (peta gambar berbasis klien)</li>
+          <li>Januari 1997: RFC 2070 (internasionalisasi)</li>
+        </ol>
 
-    <h4>14 Januari 1997</h4>
+        <h4>14 Januari 1997</h4>
 
-    <p>
-      HTML 3.2[7] dipublikasikan sebagai Konsorsium World Wide Web. Versi ini
-      merupakan versi pertama yang dikembangkan dan distandardisasi secara
-      khusus oleh Konsorsium World Wide Web, sebagaimana IETF sudah menutup
-      kelompok kerja HTMLnya pada 12 September, 1996.[8] Pada awalnya disebut
-      "Wilbur",[9] HTML 3.2 menghilangkan rumus matematika sama sekali yang
-      sedang berkonsiliasi atas kasus tumpang tindih antara berbagai kepemilikan
-      dan mengadopsi sebagian besar tanda markah visual dari Netscape. Elemen
-      kedip dari Netscape dan elemen marquee besutan Microsoft dihilangkan
-      karena kesepakatan bersama antara kedua perusahaan. Sebuah markup untuk
-      rumus matematika serupa dengan yang ada dalam HTML tidak memiliki standar
-      sampai 14 bulan kemudian di MathML.
-    </p>
+        <p>
+          HTML 3.2[7] dipublikasikan sebagai Konsorsium World Wide Web. Versi
+          ini merupakan versi pertama yang dikembangkan dan distandardisasi
+          secara khusus oleh Konsorsium World Wide Web, sebagaimana IETF sudah
+          menutup kelompok kerja HTMLnya pada 12 September, 1996.[8] Pada
+          awalnya disebut "Wilbur",[9] HTML 3.2 menghilangkan rumus matematika
+          sama sekali yang sedang berkonsiliasi atas kasus tumpang tindih antara
+          berbagai kepemilikan dan mengadopsi sebagian besar tanda markah visual
+          dari Netscape. Elemen kedip dari Netscape dan elemen marquee besutan
+          Microsoft dihilangkan karena kesepakatan bersama antara kedua
+          perusahaan. Sebuah markup untuk rumus matematika serupa dengan yang
+          ada dalam HTML tidak memiliki standar sampai 14 bulan kemudian di
+          MathML.
+        </p>
+      </article>
+    </main>
+    <footer>
+      <p>&copy; 2021 Naufal Musyaffa</p>
+    </footer>
   </body>
 </html>
