--- a/form.html
+++ b/form.html
@@ -8,11 +8,30 @@
   <body>
     <h1>Formulir Isian</h1>
     <form action="alamat/kemana/data/dikirim" method="post">
-      <input type="text" />
-      <input type="email" />
-      <input type="password" />
-      <input type="number" />
-      <input type="color" />
+      <div>
+        <label for="name">Nama Lengkap</label>
+        <input type="text" placeholder="Nama" id="name" />
+      </div>
+
+      <div>
+        <label for="email">Email</label>
+        <input type="email" placeholder="Email" id="email" />
+      </div>
+
+      <div>
+        <label for="password">Password</label>
+        <input type="password" placeholder="Password" id="password" />
+      </div>
+
+      <div>
+        <label for="phone">Phone</label>
+        <input type="number" placeholder="phone" />
+      </div>
+
+      <div>
+        <label for="color">Color</label>
+        <input type="color" placeholder="Color" id="color" />
+      </div>
     </form>
   </body>
 </html>
