--- a/form.html
+++ b/form.html
@@ -7,7 +7,9 @@
   </head>
   <body>
     <h1>Formulir Isian</h1>
-    <form action="alamat/kemana/data/dikirim" method="post">
+    <form action="google.com" method="post">
+      <button type="button">tombol biasa</button>
+
       <div>
         <label for="name">Nama Lengkap</label>
         <input type="text" placeholder="Nama" id="name" />
@@ -17,6 +19,8 @@
         <label for="email">Email</label>
         <input type="email" placeholder="Email" id="email" />
       </div>
+
+      <button>Jangan Kirim Lagi</button>
 
       <div>
         <label for="password">Password</label>
@@ -32,6 +36,10 @@
         <label for="color">Color</label>
         <input type="color" placeholder="Color" id="color" />
       </div>
+
+      <button type="submit">Kirim</button>
+
+      <input type="button" value="Daftar" />
     </form>
   </body>
 </html>
