--- a/form.html
+++ b/form.html
@@ -7,29 +7,34 @@
   </head>
   <body>
     <h1>Formulir Isian</h1>
-    <form action="google.com" method="post">
+    <form action="daftar" method="post">
       <button type="button">tombol biasa</button>
 
       <div>
         <label for="name">Nama Lengkap</label>
-        <input type="text" placeholder="Nama" id="name" />
+        <input type="text" placeholder="Nama" id="name" name="name" />
       </div>
 
       <div>
         <label for="email">Email</label>
-        <input type="email" placeholder="Email" id="email" />
+        <input type="email" placeholder="Email" id="email" name="email" />
       </div>
 
       <button>Jangan Kirim Lagi</button>
 
       <div>
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" />
+        <input
+          type="password"
+          placeholder="Password"
+          id="password"
+          name="password"
+        />
       </div>
 
       <div>
         <label for="phone">Phone</label>
-        <input type="number" placeholder="phone" />
+        <input type="number" placeholder="phone" name="phone" />
       </div>
 
       <div>
