Mengenal Input Text Area

--- a/form.html
+++ b/form.html
@@ -73,9 +73,17 @@
 
       <div>
         <label for="term">Order sesuai pesanan</label>
-        <input type="checkbox" name="term" id="term" checked />
+        <input type="checkbox" name="term" id="term" checked value="true" />
         <!-- checked berfungsi untuk memberikan nilai default pada checkbox -->
       </div>
+
+      <div>
+        <p>
+          <label for="notes">Catatan</label>
+        </p>
+        <textarea name="notes" id="notes" cols="100" rows="5"></textarea>
+      </div>
+
       <button type="submit">Order</button>
     </form>
   </body>
